Actualizo seccion evaluacion

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -6338,8 +6338,77 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## 5. Desempeño en trainset de los modelos\n",
-    "\n"
+    "## 5. Desempeño de modelos con train dataset\n",
+    "\n",
+    "Se utiliza el notebook `evaluacion_modelos.ipynb` para cumplir los siguientes objetivos:\n",
+    "\n",
+    "- Cargar los mejores modelos obtenidos\n",
+    "- Evaluarlos tanto en **train** como en **test**\n",
+    "- Comparar métricas (RMSE, MAE, R²)\n",
+    "- Cuantificar la **brecha de generalización**\n",
+    "- Elegir el mejor modelo justificando la selección\n",
+    "\n",
+    "### Resultados\n",
+    "\n",
+    "| model                      | dataset | MAE_train | MAE_test | RMSE_train | RMSE_test | R2_train | R2_test | gen_gap_rmse | rel_gap_rmse |\n",
+    "|-----------------------------|---------|-----------|----------|------------|-----------|----------|---------|--------------|--------------|\n",
+    "| XGBoost_A_std              | A       | 0.163221  | 4.245537 | 0.240138   | 6.314029  | 0.999529 | 0.709039 | 6.073892     | 25.293386    |\n",
+    "| RandomForest_B_std         | B       | 1.717307  | 4.727157 | 2.580707   | 6.957816  | 0.945576 | 0.646680 | 4.377109     | 1.696089     |\n",
+    "| LASSO_A_std                | A       | 6.527099  | 7.213173 | 8.967902   | 10.391036 | 0.342800 | 0.211976 | 1.423134     | 0.158692     |\n",
+    "| Regresor_Polinomico_A_std  | A       | 6.546484  | 7.359551 | 8.904705   | 10.470810 | 0.352030 | 0.199830 | 1.566105     | 0.175874     |\n",
+    "| Neural_Network_A_std       | A       | 7.927870  | 7.699104 | 10.055259  | 10.580532 | 0.173768 | 0.182972 | 0.525273     | 0.052239     |\n",
+    "\n",
+    "- MAE_train (Mean Absolute Error – Train)\n",
+    "- MAE_test (Mean Absolute Error – Test)\n",
+    "- RMSE_train (Root Mean Squared Error – Train)\n",
+    "- RMSE_test (Root Mean Squared Error – Test)\n",
+    "- R2_train (Coefficient of Determination – Train)\n",
+    "- R2_test (Coefficient of Determination – Test)\n",
+    "- gen_gap_rmse (Generalization Gap – RMSE): diferencia entre RMSE_test y RMSE_train.\n",
+    "- rel_gap_rmse (Relative Generalization Gap – RMSE): brecha de generalización normalizada como un porcentaje del RMSE de entrenamiento.\n",
+    "\n",
+    "### Observaciones\n",
+    "\n",
+    "#### **XGBoost_A_std (Dataset A)**\n",
+    "\n",
+    "* **Entrenamiento:** MAE muy bajo (0.16) y RMSE bajo (0.24), con un (R^2 \\approx 0.9995). Esto indica un ajuste casi perfecto al train.\n",
+    "* **Test:** Error notablemente más alto (MAE = 4.25, RMSE = 6.31) y (R^2 \\approx 0.71).\n",
+    "* **Generalización:** El modelo claramente está sobreajustado (train casi perfecto, test moderado). Aun así, es el **mejor modelo en test** por (R^2).\n",
+    "* **Gap:** el salto de RMSE de 0.24 → 6.31 muestra gran brecha, pero mantiene buena capacidad predictiva en test.\n",
+    "\n",
+    "#### **RandomForest_B_std (Dataset B)**\n",
+    "\n",
+    "* **Entrenamiento:** MAE de 1.71 y RMSE de 2.58, con (R^2 = 0.945). Buen desempeño en train pero no perfecto.\n",
+    "* **Test:** MAE de 4.72, RMSE de 6.95, (R^2 = 0.647).\n",
+    "* **Generalización:** El modelo generaliza relativamente bien, aunque con menor (R^2) que XGBoost. El gap relativo (≈1.7) es más bajo que en XGBoost (25). Eso significa que RandomForest es más estable.\n",
+    "\n",
+    "#### **LASSO_A_std (Dataset A)**\n",
+    "\n",
+    "* **Entrenamiento:** MAE = 6.52, RMSE = 8.96, (R^2 = 0.34). El modelo apenas explica un 34% de la varianza en train.\n",
+    "* **Test:** Peor aún: MAE = 7.21, RMSE = 10.39, (R^2 = 0.21).\n",
+    "* **Generalización:** Modelo débil, subajustado (ni siquiera capta la estructura en train).\n",
+    "\n",
+    "#### **Regresor_Polinomico_A_std (Dataset A)**\n",
+    "\n",
+    "* **Entrenamiento:** MAE = 6.54, RMSE = 8.90, (R^2 = 0.35). Similar a LASSO, con baja capacidad de ajuste.\n",
+    "* **Test:** MAE = 7.35, RMSE = 10.47, (R^2 = 0.20).\n",
+    "* **Generalización:** También subajustado, no captura patrones relevantes.\n",
+    "\n",
+    "#### **Neural_Network_A_std (Dataset A)**\n",
+    "\n",
+    "* **Entrenamiento:** MAE = 7.92, RMSE = 10.05, con (R^2 = 0.17).\n",
+    "* **Test:** MAE = 7.69, RMSE = 10.58, (R^2 = 0.18).\n",
+    "* **Generalización:** Desempeño bajo tanto en train como en test, pero al menos no muestra gran gap. El modelo no logró entrenar correctamente (posible mal tuning o falta de épocas).\n",
+    "\n",
+    "### **Conclusiones**\n",
+    "\n",
+    "1. **XGBoost_A_std** es el **mejor modelo** en cuanto a precisión en test (R^2 = 0.71), aunque sobreajusta mucho.\n",
+    "2. **RandomForest_B_std** muestra un trade-off más equilibrado: buen desempeño en train (R^2 = 0.94) y test (R^2 = 0.65), con un gap más controlado.\n",
+    "3. **Los demás modelos (LASSO, Polinómico, Neural Net)** tienen bajo poder predictivo y no deberían considerarse.\n",
+    "4. La decisión depende del **criterio de negocio**:\n",
+    "\n",
+    "   * Si se prioriza **precisión máxima en test**, elegir **XGBoost_A_std**.\n",
+    "   * Si se prioriza **estabilidad y menor riesgo de sobreajuste**, elegir **RandomForest_B_std**."
    ]
   },
   {
