--- a/TP3/evaluacion_modelos.ipynb
+++ b/TP3/evaluacion_modelos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b3e3af1c",
    "metadata": {},
    "outputs": [
@@ -53,17 +53,6 @@
     "X_B_train = pd.read_csv(\"./B_sets/x_B_train_std.csv\")\n",
     "X_B_test  = pd.read_csv(\"./B_sets/x_B_test_std.csv\")\n",
     "\n",
-    "# --- Limpieza de datasets ---\n",
-    "def drop_index_col(df):\n",
-    "    if \"Unnamed: 0\" in df.columns:\n",
-    "        return df.drop(columns=[\"Unnamed: 0\"])\n",
-    "    return df\n",
-    "\n",
-    "X_A_train = drop_index_col(X_A_train)\n",
-    "X_A_test  = drop_index_col(X_A_test)\n",
-    "X_B_train = drop_index_col(X_B_train)\n",
-    "X_B_test  = drop_index_col(X_B_test)\n",
-    "\n",
     "# Convertir y a Series\n",
     "def y_to_series(y_df):\n",
     "    if isinstance(y_df, pd.DataFrame):\n",
@@ -88,20 +77,20 @@
     "}\n",
     "\n",
     "# --- Funciones auxiliares ---\n",
-    "def align_features_for_model(X, model):\n",
-    "    Xc = X.copy()\n",
-    "    if hasattr(model, \"feature_names_in_\"):\n",
-    "        feat = list(model.feature_names_in_)\n",
-    "        missing = [f for f in feat if f not in Xc.columns]\n",
-    "        if missing:\n",
-    "            raise ValueError(f\"Faltan columnas requeridas: {missing}\")\n",
-    "        return Xc[feat]\n",
-    "    elif hasattr(model, \"n_features_in_\"):\n",
-    "        if model.n_features_in_ != Xc.shape[1]:\n",
-    "            print(f\"WARNING: modelo espera {model.n_features_in_} features, X tiene {Xc.shape[1]}\")\n",
-    "        return Xc\n",
-    "    else:\n",
-    "        return Xc\n",
+    "# def align_features_for_model(X, model):\n",
+    "#     Xc = X.copy()\n",
+    "#     if hasattr(model, \"feature_names_in_\"):\n",
+    "#         feat = list(model.feature_names_in_)\n",
+    "#         missing = [f for f in feat if f not in Xc.columns]\n",
+    "#         if missing:\n",
+    "#             raise ValueError(f\"Faltan columnas requeridas: {missing}\")\n",
+    "#         return Xc[feat]\n",
+    "#     elif hasattr(model, \"n_features_in_\"):\n",
+    "#         if model.n_features_in_ != Xc.shape[1]:\n",
+    "#             print(f\"WARNING: modelo espera {model.n_features_in_} features, X tiene {Xc.shape[1]}\")\n",
+    "#         return Xc\n",
+    "#     else:\n",
+    "#         return Xc\n",
     "\n",
     "def evaluate_preds(y_true, y_pred):\n",
     "    mae = mean_absolute_error(y_true, y_pred)\n",
@@ -131,11 +120,11 @@
     "        X_train, X_test, y_train, y_test = X_A_train, X_A_test, y_A_train, y_A_test\n",
     "        dataset_label = \"A\"\n",
     "\n",
-    "    X_train_al = align_features_for_model(X_train, model)\n",
-    "    X_test_al  = align_features_for_model(X_test, model)\n",
+    "    # X_train_al = align_features_for_model(X_train, model)\n",
+    "    # X_test_al  = align_features_for_model(X_test, model)\n",
     "\n",
-    "    y_pred_train = model.predict(X_train_al)\n",
-    "    y_pred_test  = model.predict(X_test_al)\n",
+    "    y_pred_train = model.predict(X_train)\n",
+    "    y_pred_test  = model.predict(X_test)\n",
     "\n",
     "    # Asegurar que las predicciones sean 1D\n",
     "    y_pred_train = np.ravel(y_pred_train)\n",
@@ -182,6 +171,7 @@
     "    plt.tight_layout()\n",
     "    plt.savefig(os.path.join(OUTPUT_DIR, f\"{model_key}_residuals_test.png\"))\n",
     "    plt.close()\n",
+    "\n",
     "\n",
     "# --- Resumen final ---\n",
     "summary_df = pd.DataFrame(summary_rows)\n",
