Se actualiza conclusión

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -6344,8 +6344,16 @@
     "\n",
     "- Cargar los mejores modelos obtenidos\n",
     "- Evaluarlos tanto en **train** como en **test**\n",
-    "- Comparar métricas (RMSE, MAE, R²)\n",
-    "- Cuantificar la **brecha de generalización**\n",
+    "- Comparar métricas (RMSE, MAE, R²):\n",
+    "  - MAE_train (Mean Absolute Error – Train)\n",
+    "  - MAE_test (Mean Absolute Error – Test)\n",
+    "  - RMSE_train (Root Mean Squared Error – Train)\n",
+    "  - RMSE_test (Root Mean Squared Error – Test)\n",
+    "  - R2_train (Coefficient of Determination – Train)\n",
+    "  - R2_test (Coefficient of Determination – Test)\n",
+    "- Cuantificar la **brecha de generalización**:\n",
+    "  - gen_gap_rmse (Generalization Gap – RMSE): diferencia entre RMSE_test y RMSE_train.\n",
+    "  - rel_gap_rmse (Relative Generalization Gap – RMSE): brecha de generalización normalizada como un porcentaje del RMSE de entrenamiento.\n",
     "- Elegir el mejor modelo justificando la selección\n",
     "\n",
     "### Resultados\n",
@@ -6357,15 +6365,6 @@
     "| LASSO_A_std                | A       | 6.527099  | 7.213173 | 8.967902   | 10.391036 | 0.342800 | 0.211976 | 1.423134     | 0.158692     |\n",
     "| Regresor_Polinomico_A_std  | A       | 6.546484  | 7.359551 | 8.904705   | 10.470810 | 0.352030 | 0.199830 | 1.566105     | 0.175874     |\n",
     "| Neural_Network_A_std       | A       | 7.927870  | 7.699104 | 10.055259  | 10.580532 | 0.173768 | 0.182972 | 0.525273     | 0.052239     |\n",
-    "\n",
-    "- MAE_train (Mean Absolute Error – Train)\n",
-    "- MAE_test (Mean Absolute Error – Test)\n",
-    "- RMSE_train (Root Mean Squared Error – Train)\n",
-    "- RMSE_test (Root Mean Squared Error – Test)\n",
-    "- R2_train (Coefficient of Determination – Train)\n",
-    "- R2_test (Coefficient of Determination – Test)\n",
-    "- gen_gap_rmse (Generalization Gap – RMSE): diferencia entre RMSE_test y RMSE_train.\n",
-    "- rel_gap_rmse (Relative Generalization Gap – RMSE): brecha de generalización normalizada como un porcentaje del RMSE de entrenamiento.\n",
     "\n",
     "### Observaciones\n",
     "\n",
@@ -6398,17 +6397,7 @@
     "\n",
     "* **Entrenamiento:** MAE = 7.92, RMSE = 10.05, con (R^2 = 0.17).\n",
     "* **Test:** MAE = 7.69, RMSE = 10.58, (R^2 = 0.18).\n",
-    "* **Generalización:** Desempeño bajo tanto en train como en test, pero al menos no muestra gran gap. El modelo no logró entrenar correctamente (posible mal tuning o falta de épocas).\n",
-    "\n",
-    "### **Conclusiones**\n",
-    "\n",
-    "1. **XGBoost_A_std** es el **mejor modelo** en cuanto a precisión en test (R^2 = 0.71), aunque sobreajusta mucho.\n",
-    "2. **RandomForest_B_std** muestra un trade-off más equilibrado: buen desempeño en train (R^2 = 0.94) y test (R^2 = 0.65), con un gap más controlado.\n",
-    "3. **Los demás modelos (LASSO, Polinómico, Neural Net)** tienen bajo poder predictivo y no deberían considerarse.\n",
-    "4. La decisión depende del **criterio de negocio**:\n",
-    "\n",
-    "   * Si se prioriza **precisión máxima en test**, elegir **XGBoost_A_std**.\n",
-    "   * Si se prioriza **estabilidad y menor riesgo de sobreajuste**, elegir **RandomForest_B_std**."
+    "* **Generalización:** Desempeño bajo tanto en train como en test, pero al menos no muestra gran gap. El modelo no logró entrenar correctamente (posible mal tuning o falta de épocas)."
    ]
   },
   {
@@ -6448,13 +6437,16 @@
    "id": "072632c4",
    "metadata": {},
    "source": [
-    "En las secciones 4 y 5, llevamos a cabo un proceso para seleccionar el mejor modelo para nuestro problema de regresión. Evaluamos cinco modelos diferentes: regresión polinómica básica, regresión polinómica con LASSO, XGBoost, redes neuronales y Random Forest, buscando los hiperparámetros óptimos para cada uno mediante random search y el mejor dataset para cada modelo.\n",
+    "En el análisis comparativo de los modelos evaluados, **XGBoost_A_std** se destacó como la alternativa más robusta para la predicción:\n",
     "\n",
-    "Los resultados muestran que XGBoost con el dataset A estandarizado alcanzó un RMSE de 6.3140 sobre el conjunto de testeo. Para evaluar si este rendimiento es aceptable, comparamos este valor con la media de la variable ICA que es de 45.26. El RMSE representa aproximadamente un 14% de la media del ICA, lo que indica un resultado relativamente bueno ya que el error promedio es considerablemente menor que el valor típico de la variable objetivo. Esta combinación resultó ser la ganadora del proceso de selección.\n",
+    "- Presentó el **menor error en el conjunto de prueba** (MAE = 4.24, RMSE = 6.31) y un **R²_test de 0.709**, explicando aproximadamente el 71% de la variabilidad de los datos.\n",
+    "- Aunque mostró un ajuste casi perfecto en entrenamiento (R²_train ≈ 0.999), con errores mínimos, se observó cierto sobreajuste al evaluar los datos de prueba. Aun así, su rendimiento en test lo convierte en la opción más confiable dentro del conjunto de modelos.\n",
     "\n",
-    "Es interesante notar que el dataset A estandarizado fue consistentemente el que mejor funcionó para la mayoría de los modelos, sugiriendo que esta versión de los datos captura mejor los patrones subyacentes del problema.\n",
+    "El **segundo mejor desempeño** correspondió a **RandomForest_B_std**, con MAE_test de 4.72, RMSE_test de 6.95 y R²_test de 0.647. Este modelo mostró un comportamiento más estable en términos de generalización, manteniendo un equilibrio adecuado entre ajuste y capacidad predictiva.\n",
     "\n",
-    "Random Forest mostró un desempeño similar con un RMSE de 6.9578, posicionándose como una alternativa viable, aunque ligeramente inferior. Sin embargo, tanto la regresión polinómica (con y sin LASSO) como las redes neuronales mostraron un rendimiento significativamente peor, con valores de RMSE superiores a 10. Esto sugiere que la naturaleza no lineal y compleja de los datos se beneficia más de los métodos basados en árboles de decisión que de los enfoques lineales o las redes neuronales con las arquitecturas probadas.\n"
+    "Los demás modelos —**LASSO_A_std**, **Regresor_Polinomico_A_std** y **Neural_Network_A_std**— presentaron desempeños considerablemente inferiores, con errores de prueba altos (MAE_test y RMSE_test superiores a 7 y 10) y bajos coeficientes de determinación (R²_test entre 0.18 y 0.21), evidenciando que explican muy poca varianza de los datos y no logran superar problemas de sobreajuste o subajuste.\n",
+    "\n",
+    "En resumen, **XGBoost_A_std** se posiciona como la opción más efectiva para la predicción, seguido de **RandomForest_B_std** como alternativa sólida, mientras que los otros modelos resultan poco adecuados para esta tarea."
    ]
   }
  ],
